<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_pkg</name>
  <version>0.0.0</version>
  <description>simulation package for bachelor thesis</description>
  <maintainer email="fil.kral20@gmail.com">ocupi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <!-- <depend>joint_state_publisher</depend> -->
  <depend>rviz2</depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>
  <depend>ament_index_python</depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
